--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form id="contact-form" action="https://formsubmit.co/cf3672ac80d21cbe1fb6c6624aebcf14" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
@@ -615,6 +615,7 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
+              <input type="hidden" name="_captcha" value="false">
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
           </div>
@@ -657,7 +658,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
+  
 </body>
 
 </html>
