update about section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-bolt-circle"></i> <span>Skills</span></a></li>
           <!-- <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li> -->
           <!-- <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li> -->
           <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
@@ -95,8 +96,23 @@
             <p class="">
               As a full stack developer with a focus on backend, I excel in creating efficient and scalable solutions that power the core functionality of web applications.
             </p>
+            <div class="row">
+              <ul>
+                <li>
+                  <i class="bi bi-arrow-right-circle"></i>
+                  <strong>Education:</strong>
+                  <span>B.Tech. (CS)</span>
+                </li>
+
+                <li>
+                  <i class="bi bi-arrow-right-circle"></i>
+                  <strong>Experience:</strong>
+                  <span>5+ years</span>
+                </li>
+              </ul>
+            </div>
             <p>
-              Throughout my career, I have worked on a variety of projects, ranging from small-scale applications to large enterprise systems. I have experience collaborating with cross-functional teams, and delivering high-quality solutions on time.
+              Throughout my career, I have worked on a variety of projects, ranging from small-scale applications to large enterprise systems. I have experience collaborating with cross-functional teams, providing technical guidance and leadership, and delivering high-quality solutions on time.
             </p>
             <p>
               In addition to my technical skills, I am a problem solver who is committed to continuous learning and development. I enjoy staying up-to-date with the latest industry trends and technologies, and I am always looking for new ways to improve my skills and knowledge.
@@ -157,7 +173,7 @@
     <!-- End Facts Section -->
 
     <!-- ======= Skills Section ======= -->
-    <!-- <section id="skills" class="skills section-bg">
+    <section id="skills" class="skills section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -220,7 +236,7 @@
         </div>
 
       </div>
-    </section> -->
+    </section>
     <!-- End Skills Section -->
 
     <!-- ======= Resume Section ======= -->
