--- a/index.html
+++ b/index.html
@@ -97,19 +97,27 @@
               As a full stack developer with a focus on backend, I excel in creating efficient and scalable solutions that power the core functionality of web applications.
             </p>
             <div class="row">
-              <ul>
-                <li>
-                  <i class="bi bi-arrow-right-circle"></i>
-                  <strong>Education:</strong>
-                  <span>B.Tech. (CS)</span>
-                </li>
+              <div class="ml-2 mt-2">
+                <ul>
+                  <li>
+                    <i class="bi bi-arrow-right-circle"></i>
+                    <strong>Education:</strong>
+                    <span>B.Tech. (CS)</span>
+                  </li>
+  
+                  <li>
+                    <i class="bi bi-arrow-right-circle"></i>
+                    <strong>Experience:</strong>
+                    <span>5+ years</span>
+                  </li>
 
-                <li>
-                  <i class="bi bi-arrow-right-circle"></i>
-                  <strong>Experience:</strong>
-                  <span>5+ years</span>
-                </li>
-              </ul>
+                  <li>
+                    <i class="bi bi-arrow-right-circle"></i>
+                    <strong>Roles:</strong>
+                    <span>Full-stack Developer / Backend Developer / DevOps</span>
+                  </li>
+                </ul>
+              </div>
             </div>
             <p>
               Throughout my career, I have worked on a variety of projects, ranging from small-scale applications to large enterprise systems. I have experience collaborating with cross-functional teams, providing technical guidance and leadership, and delivering high-quality solutions on time.
